Les Maires (#129)
* getCurrentDayOfWeek location modification

* getCurrentDayOfWeek location modification (2)

* Add Mayor base

* Add title Maire

* Change getTimeUntilNextMonday to getTimeUntilNextDay

* Update base of Mayor
- added start of Menus and methods

* Update base of Mayor (2)
- change structure of mayor, added new methods

* Reorgenize ColorUtils

* Add Elector Participation
- methods createElector, new perks

* Add Color Change when Candated

* Fix bug with SQL duplication and inv not closing

* Changes + System of Vote
- String to UUID
- add MayorVoteMenu.java

* Improvement and fixes

* Improvement and fixes (2)

* Rename Elector => Candidate
- plus compréhensible, plus logique

* Reorgenize playerHasVoted in playerVotes

* Lot of changes (structure, fix, ...)

* Add ElectionType (in SQL, classes, methods) and more
- add instruction when city create and delete

* Delete delconfirm subcommand

* Lot of changes about Mayor (menus, ..)

* Fix MayorColorMenu

* Add AdminMayorCommands

* Add Constants of Table Name

* Add All Perk V1 + Material to ItemStack

* Add Misc

* Fix Error

* Add Constants PHASE_X_DAY

* Add Random Pick Mayor on Phase 2 CityCreate

* Remove omc_items:aywenite (wait for PR push)

* move: MayorModifyMenu

* fix: graphics text display
- Italic text
- (Normalement) les ItemFlags sont enleve pour les perks

* fix: /city error because content is null

* fix: button back

* add: MayorMandateMenu
executer lorsque le maire est activé

* add: initPhase2
J'ai tenté d'optimiser cette methode afin de passer d'une complexité de O(n²) a O(n log(n))

* add: aywenite itemstack

* fix: italic

* fix: add check city for election phase 2

* fix: perk1 is null + add: randomPerk methods

* fix: Index 2 out of bounds for length 2

* add: robust menu

* add: prefix Mayor

* build: fix

* fix: player is null

* add: message on initPhase1/2

* add: offlinePlayerCache

* add: offlinePlayerCache (2)

* add: Perk FOU_DE_RAGE + methods in perkmanager

* fix: